--- a/WhitbyWoodToolbar/UserControl1.xaml
+++ b/WhitbyWoodToolbar/UserControl1.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="WhitbyWoodToolbar.UserControl1"
+﻿<UserControl x:Class="MagmaWorksToolbar.UserControl1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:lvc="clr-namespace:LiveCharts.Wpf;assembly=LiveCharts.Wpf"
-             xmlns:local="clr-namespace:WhitbyWoodToolbar"
+             xmlns:local="clr-namespace:MagmaWorksToolbar"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     
@@ -24,8 +24,8 @@
                     <TextBox Text="{Binding ICEMaterial.ReinforcementDensity}"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <ComboBox ItemsSource="{Binding ICEMaterial.Replacements}" SelectedItem="{Binding ICEMaterial.Replacement}"/>
                     <ComboBox ItemsSource="{Binding ICEMaterial.Grades}" SelectedItem="{Binding ICEMaterial.Grade}"/>
+                    <ComboBox ItemsSource="{Binding ICEMaterial.Replacements}" SelectedItem="{Binding ICEMaterial.Replacement}"/>
                 </StackPanel>
             </StackPanel>
         </DataTemplate>
@@ -54,22 +54,25 @@
         <Grid Grid.Row="0">
             <StackPanel>
                 <TextBlock Text="Carbon Calculator"/>
-                <TextBlock Text="Elements are imported from Revit and can be filtered according to the Revit Category or Revit Material. Materials can be assigned to elements using data from the ICEv2 database and this data together with the volumes from Revit are used to calculate total embodied carbon." TextWrapping="Wrap" FontSize="10"/>
-                <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Total carbon: "/>
-                <TextBlock Text="{Binding TotalCarbon}"/>
-                <TextBlock Text="Tonnes"/>
+                <TextBlock Text="Elements are imported from Revit and can be filtered according 
+to the Revit Category or Revit Material. Materials can be assigned to elements using data from the ICEv2 database and 
+this data together with the volumes from Revit are used to calculate total embodied carbon.
+All carbon figures are cradle to gate." 
+                           TextWrapping="Wrap" 
+                           FontSize="10"/>
+                <StackPanel Orientation="Horizontal" Margin="0 0 0 15">
+                    <TextBlock Text="Elements imported: "/>
+                    <TextBlock Text="{Binding ElementsImported}"/>
+                    <TextBlock Text="Total carbon: " Margin="30 0 0 0"/>
+                    <TextBlock Text="{Binding TotalCarbonDisplay}"/>
+                    <TextBlock Text="Total volume of material: " Margin="30 0 0 0"/>
+                    <TextBlock Text="{Binding TotalVolumeDisplay}" />
+                </StackPanel>
             </StackPanel>
-            </StackPanel>
-
         </Grid>
-
+        
         <StackPanel Grid.Row="2" Orientation="Horizontal">
-            <Image HorizontalAlignment="Left">
-                <Image.Source>
-                    <BitmapImage UriSource="/resources/MagmaWorks_logo.png"/>
-                </Image.Source>
-            </Image>
+            <Image Source="pack://application:,,/MagmaWorksToolbar;Component/resources/MagmaWorks_logo.png"/>
             <TextBlock Text="Carbon calculator" FontSize="30"/>
         </StackPanel>
 
@@ -186,33 +189,50 @@
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Left">
                         <TextBlock Text="" Width="20"/>
                         <Border BorderThickness="1 0 1 0" BorderBrush="Orange">
-                            <TextBlock Text="Info from Revit" Width="400"/>
+                            <TextBlock Text="Info from Revit" Width="300"/>
                         </Border>
                         <TextBlock Text="Carbon materials to apply"/>
                     </StackPanel>
                 </Border>
-                <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Auto">
-                                    <ItemsControl ItemsSource="{Binding Elements}">
-                    <ItemsControl.ItemTemplate>
+                    <ListView Grid.Row="1" ItemsSource="{Binding SelectedElements}" 
+                              ScrollViewer.VerticalScrollBarVisibility="Visible" 
+                              ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+                              ScrollViewer.CanContentScroll="True">
+                        <ListView.ItemContainerStyle>
+                            <Style TargetType="ListViewItem">
+                                <Setter Property="Focusable" Value="false"/>
+                            <!--<Setter Property="Visibility" Value="Visible"/>
+                            <Style.Triggers>
+                                <DataTrigger Binding="{Binding IsSelected}" Value="False">
+                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                </DataTrigger>
+                            </Style.Triggers>-->
+                        </Style>
+                            
+                        </ListView.ItemContainerStyle>
+                        <ListView.ItemTemplate>
                             <DataTemplate>
                                 <Border BorderBrush="Orange" BorderThickness="0 0 0 1">
                                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Stretch">
                                         <CheckBox IsChecked="{Binding ElementSelected}" Width="20"/>
                                         <Border BorderThickness="1 0 1 0" BorderBrush="Orange">
-                                            <StackPanel Width="400" Height="50" VerticalAlignment="Top">
+                                            <StackPanel Width="300" Height="50" VerticalAlignment="Top">
                                                 <TextBlock Text="{Binding LongName}" Width="400" TextWrapping="Wrap" Style="{StaticResource ElementSelectedTextStyle}" HorizontalAlignment="Left"/>
                                                 <StackPanel Orientation="Horizontal">
                                                     <TextBlock Text="Volume: "/>
                                                     <TextBlock Text="{Binding Volume}"/>
-                                                    <TextBlock Text="Carbon: " Margin="15 0 0 0"/>
-                                                    <TextBlock Text="{Binding EmbodiedCarbon}"/>
+                                                    
                                                 </StackPanel>
                                             </StackPanel>
                                         </Border>
                                         <StackPanel Orientation="Vertical">
                                             <StackPanel Orientation="Horizontal">
                                                 <ComboBox ItemsSource="{Binding MaterialTypes}" SelectedItem="{Binding MaterialType}"/>
-                                                <TextBlock Text="{Binding ICEMaterial.Name}"/>
+                                                <TextBlock Text="{Binding ICEMaterial.Name}" FontStyle="Italic">
+                                                    <TextBlock.ToolTip>
+                                                        <TextBlock Text="{Binding ICEMaterial.Info}" TextWrapping="Wrap" MaxWidth="500"/>
+                                                    </TextBlock.ToolTip>
+                                                </TextBlock>
                                             </StackPanel>
                                             <ContentControl Content="{Binding}" IsTabStop="False">
                                                 <ContentControl.Style>
@@ -234,30 +254,31 @@
                                                     </Style>
                                                 </ContentControl.Style>
                                             </ContentControl>
-                                            <StackPanel Orientation="Horizontal" Margin="0 0 0 15">
-                                                <TextBlock Text="Carbon density: "/>
-                                                <TextBlock Text="{Binding ICEMaterial.CarbonDensity}" Width="50"/>
-                                                <TextBlock Text="kg/m3"/>
-                                                <Button Command="{Binding CopyMaterialCommand}" Content="Copy to selected"/>
-                                            </StackPanel>
+                                        <StackPanel Orientation="Horizontal" Margin="0 0 0 15">
+                                            <TextBlock Text="Carbon density: "/>
+                                            <TextBlock Text="{Binding ICEMaterial.CarbonDensity}" Width="50"/>
+                                            <TextBlock Text="kg/m3"/>
+                                            <TextBlock Text="Carbon: " Margin="15 0 0 0"/>
+                                            <TextBlock Text="{Binding EmbodiedCarbon}"/>
+                                            <Button Command="{Binding CopyMaterialCommand}" Content="Copy to selected"/>
                                         </StackPanel>
-                                    </StackPanel>
-                                <Border.Style>
-                                    <Style TargetType="Border">
-                                        <Setter Property="Visibility" Value="Visible"/>
-                                        <Style.Triggers>
-                                            <DataTrigger Binding="{Binding IsSelected}" Value="False">
-                                                <Setter Property="Visibility" Value="Collapsed"/>
-                                            </DataTrigger>
-                                        </Style.Triggers>
-                                    </Style>
-                                </Border.Style>
-                            </Border>
-                            </DataTemplate>
-                        </ItemsControl.ItemTemplate>
-                    </ItemsControl>
 
-                </ScrollViewer>
+                                    </StackPanel>
+                                    </StackPanel>
+                                    <!--<Border.Style>
+                                        <Style TargetType="Border">
+                                            <Setter Property="Visibility" Value="Visible"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding IsSelected}" Value="False">
+                                                    <Setter Property="Visibility" Value="Collapsed"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </Border.Style>-->
+                                </Border>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
             </Grid>
         </Grid>
     </Grid>
