--- a/CarbonCalculatorControl/MaterialSetControl.xaml
+++ b/CarbonCalculatorControl/MaterialSetControl.xaml
@@ -3,45 +3,114 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:CarbonCalculatorControl"
+             xmlns:local="clr-namespace:CarbonCalculator"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" Grid.Row="2">
-            <Grid Grid.Row="2" >
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Dictionary1.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+            <DataTemplate DataType="{x:Type local:ICEMaterialVMBase}">
+                <local:MaterialEditor DataContext="{Binding}"></local:MaterialEditor>
+            </DataTemplate>
+            <DataTemplate DataType="{x:Type local:GWPGenericMaterialVM}">
+                <local:EPDMaterialEditor DataContext="{Binding}"/>
+            </DataTemplate>
+        </ResourceDictionary>
+    </UserControl.Resources>
+
+    <DockPanel DataContext="{Binding Model}">
+        <Menu DockPanel.Dock="Top">
+            <MenuItem Header="Materials">
+                <MenuItem Header="Add Concrete (ICE v2)" Command="{Binding SelectedMaterialSet.AddConcreteCommand}"/>
+                <MenuItem Header="Add Steel (ICE v2)" Command="{Binding SelectedMaterialSet.AddSteelCommand}"/>
+                <MenuItem Header="Add Timber (ICE v2)" Command="{Binding SelectedMaterialSet.AddTimberCommand}"/>
+                <MenuItem Header="Add Concrete (ICE v3)" Command="{Binding SelectedMaterialSet.AddConcreteV3Command}"/>
+                <MenuItem Header="Add EPD" Command="{Binding SelectedMaterialSet.AddGeneric}"/>
+            </MenuItem>
+        </Menu>
+
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="5"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <GridSplitter Grid.Column="1" HorizontalAlignment="Stretch"/>
+
+            <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="5"/>
                     <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
-                    <RowDefinition Height="auto"/>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Text="Material set:" Grid.Row="0" Margin="30 0 0 0"/>
-                    <TextBox Text="{Binding Name}" MinWidth="200"/>
+                <GridSplitter Grid.Row="1" HorizontalAlignment="Stretch"/>
+                <StackPanel>
+                    <ListView x:Name="ListOfMaterialSets"
+                        ItemsSource="{Binding MaterialSetNames}"
+                        SelectionMode="Single"
+                        SelectedIndex="{Binding SelectedMaterialSetIndex}">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <StackPanel Orientation="Horizontal">
+                                    <Button 
+                                        Style="{StaticResource TrashButton}" 
+                                        Command="{Binding ElementName=ListOfMaterialSets, Path=DataContext.DeleteMaterialSetCommand}" 
+                                        CommandParameter="{Binding }"
+                                        Grid.Column="1" 
+                                        Margin="0 0 10 0"/>
+                                    <TextBlock Text="{Binding Name}"/>
+                                </StackPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                    <Button Style="{StaticResource AddButton}" Command="{Binding AddMaterialSetCommand}" ToolTip="Add new material set" HorizontalAlignment="Left"/>
                 </StackPanel>
-                <ItemsControl ItemsSource="{Binding Materials}" Grid.Row="1" Margin="30 0 0 0">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <Grid>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition Width="auto"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="{Binding Name}" Grid.Column="2"/>
-                                <Button Content="Edit" Command="{Binding EditMaterialCommand}" HorizontalAlignment="Right" Margin="0 0 10 0"/>
-                                <Button Content="Del" Command="{Binding DeleteMaterialCommand}" Grid.Column="1" Margin="0 0 10 0"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                </ItemsControl>
-                <StackPanel Orientation="Horizontal" Grid.Row="2" Margin="30 0 0 0">
-                    <Button Content="Add conc" Width="100" Command="{Binding AddConcreteCommand}" Grid.Row="1"/>
-                    <Button Content="Add steel" Width="100" Command="{Binding AddSteelCommand}" Grid.Row="1"/>
-                    <Button Content="Add timber" Width="100" Command="{Binding AddTimberCommand}" Grid.Row="1"/>
-                    <Button Content="Add EPD" Width="100" Command="{Binding AddGeneric}" Grid.Row="1"/>
+
+                <ScrollViewer HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" Grid.Row="2" Margin="0 30 0 0">
+                    <Grid Grid.Row="2" >
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="auto"/>
+                        </Grid.RowDefinitions>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="Set name: " Grid.Row="0"/>
+                            <TextBox Text="{Binding SelectedMaterialSetName}" MinWidth="200"/>
+                        </StackPanel>
+                        <ListView x:Name="ListOfMaterials" ItemsSource="{Binding MaterialNames}" Grid.Row="1" SelectionMode="Single" SelectedIndex="{Binding SelectedMaterialIndex}">
+                            <ListView.ItemTemplate>
+                                <DataTemplate>
+                                    <Grid>
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition Width="auto"/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+                                        <TextBlock Text="{Binding Name}" Grid.Column="2"/>
+                                        <Button 
+                                        Style="{StaticResource TrashButton}" 
+                                        Command="{Binding ElementName=ListOfMaterials, Path=DataContext.DeleteMaterialCommand}" 
+                                        CommandParameter="{Binding }"
+                                        Grid.Column="1" 
+                                        Margin="0 0 10 0"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Grid>
+                </ScrollViewer>
+                <StackPanel Orientation="Horizontal" Grid.Row="3" HorizontalAlignment="Center" Margin="0 30 0 0">
+                    <Button Content="Close and Apply" Click="Button_Click" Command="{Binding UpdateAllCommand}"/>
+                    <Button Content="Apply" Command="{Binding UpdateAllCommand}" Margin="15 0 0 0"/>
+
                 </StackPanel>
             </Grid>
-        </ScrollViewer>
-    </Grid>
+            <ContentControl Content="{Binding SelectedMaterial.VM}" Grid.Column="2"/>
+        </Grid>
+    </DockPanel>
 </UserControl>
