--- a/CarbonCalculatorStandalone/MainWindow.xaml
+++ b/CarbonCalculatorStandalone/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:CarbonCalculatorStandalone"
         xmlns:carbon="clr-namespace:CarbonCalculator;assembly=CarbonCalculatorWPF"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Carbon Calculator" Height="450" Width="800">
     <Grid>
         <carbon:UserControl1></carbon:UserControl1>
     </Grid>
